Major update.  Store and retrieve more fields.  With this commit, CreateSession, UpdateSession, and KeepAliveSession should be working for servers.

--- a/Prod/KeepAliveSession/.htaccess
+++ b/Prod/KeepAliveSession/.htaccess
@@ -2,5 +2,6 @@ RewriteEngine on
 
 RewriteRule \.(css|jpe?g|gif|png)$ - [L]
 
-RewriteRule ^([^/\.]+)/?$ master.php?session=$1 [L]
+#RewriteRule ^([^/\.]+)/?$ master.php?session=$1 [L]
+RewriteRule ^([^/\.]+)/?$ master.php [L]
 
